--- a/src/main/resources/static/styles/sass/_buttons.sass
+++ b/src/main/resources/static/styles/sass/_buttons.sass
@@ -7,7 +7,7 @@
         color: $primary_light;
 
     & img
-        height: 16px;
+        height: 32px;
 
 .button_main_light
     @include button_struct($primary_light, $secondary_dark);
@@ -47,3 +47,6 @@
 
     strong:nth-child(n+3)
         color: #62FE3B;
+
+svg path:hover
+    fill: red !important;
